<resources>
    <string name="app_name">校园借书0.1</string>
    <string name="login">登录/注册</string>
    <string name="name">用户名：</string>
    <string name="password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="login_or_register">登录或注册</string>
    <string name="loginSuccess">登录成功</string>
    <string name="loginfailure">登录失败</string>
    <string name="name_empty">用户名为空</string>
    <string name="password_empty">密码为空</string>
    <string name="tel_empty">电话号码为空</string>
    <string name="password_not_enough">密码长度不够</string>
    <string name="logined">您已登录</string>
    <string name="all_book">所有图书</string>
    <string name="recommand">推荐图书</string>
    <string name="book_name">书&#160;&#160;&#160;名：</string>
    <string name="output_book_name">书&#160;&#160;&#160;名：</string>
    <string name="author">作者:</string>
    <string name="publish">出版社:</string>
    <string name="sumarry">简介:</string>
    <string name="is_out">是否借出:</string>
    <string name="outed">已借出</string>
    <string name="not_out">未借出</string>
    <string name="out_author">借书人:</string>
    <string name="outed_time">2018/03/03</string>
    <string name="sxb">宋小宝</string>
    <string name="description">详情</string>
    <string name="own_out">借出</string>
    <string name="sumarry_text">这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书这是一本好书</string>
    <string name="out_state">是否借出:</string>
    <string name="borrow">借书</string>
    <string name="unknown_state">未知状态</string>
    <string name="book_detail">书本详情</string>
    <string name="out_success">借书成功啦,请到个人中心查看~~~</string>
    <string name="user_not_login">您未登录，请登录！</string>
    <string name="out_book_card_btn">图书登记</string>
    <string name="in_book_card_btn">求书发布</string>
    <string name="logout">注销</string>
    <string name="book_register">书籍登记</string>
    <string name="register">登记</string>
    <string name="publish_tv">出版社：</string>
    <string name="book_upload">书籍图片上传</string>
    <string name="author_upload_tv">作&#160;&#160;&#160;者：</string>
    <string name="upload">上传</string>
    <string name="upload_success">上传成功</string>
    <string name="user_center">个人中心</string>
    <string name="takePhoto">拍照</string>
    <string name="choosePhoto">选择本地图片</string>
    <string name="checkout_btn">发布</string>
    <string name="checkout_txt">发布</string>
    <string name="checkout_success">发布成功</string>
    <string name="inbook_check">求书登录</string>
    <string name="all_task">求书平台</string>
    <string name="access_success">您已接下借书任务</string>

    <string name="title_home">主页</string>
    <string name="title_dashboard">求书台</string>
    <string name="title_notifications">个人中心</string>
    <string name="empty_book">亲，暂无数据哦~~</string>
    <string name="contract">电&#160;&#160;&#160;&#160;话：</string>
    <string name="tel_not_enough">电话号码不足11位</string>

    <string name="more">更多...</string>
    <string name="latested">最新图书</string>
    <string name="receiver_task">接受借书</string>
    <string name="cancel_task">取消借书</string>
    <string name="saveSms">请输入书本的简介</string>
</resources>
