<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFE4B5"
    >


    <TextView
        android:id="@+id/name_tv"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:text="@string/name"
        style="@style/item_text_theme"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/name_tv"
        android:layout_toRightOf="@id/name_tv"
        android:gravity="center_vertical"
        android:lines="1"
        android:inputType="text"
        android:id="@+id/name_et"
        style="@style/item_text_theme"
        />

    <TextView
        android:id="@+id/password_tv"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@id/name_tv"
        android:layout_marginTop="12sp"
        android:text="@string/password"
        style="@style/item_text_theme" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/password_tv"
        android:layout_toRightOf="@id/password_tv"
        android:gravity="center_vertical"
        android:lines="1"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        style="@style/item_text_theme"
        />

    <TextView
        android:id="@+id/tel_tv"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@id/password_tv"
        android:layout_marginTop="12sp"
        android:text="@string/contract"
        style="@style/item_text_theme" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tel_tv"
        android:layout_toRightOf="@id/tel_tv"
        android:gravity="center_vertical"
        android:lines="1"
        android:id="@+id/tel_et"
        android:inputType="number"
        style="@style/item_text_theme"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/submit_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/login_or_register"
        style="@style/photo_btn_theme"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        />
</RelativeLayout>
