<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFE4B5"
    >

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:textSize="32dp"
        android:layout_marginTop="18dp"
        />

    <ImageView
        android:id="@+id/img"
        android:layout_width="78dp"
        android:layout_height="102dp"
        android:background="#FFFFFF"
        android:layout_below="@id/name_tv"
        android:scaleType="fitXY"
        />



    <LinearLayout
        android:id="@+id/author_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_marginTop="17dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            style="@style/item_detail_theme"
            />

        <TextView
            android:id="@+id/author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_detail_theme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_ll"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            style="@style/item_detail_theme" />

        <TextView
            android:id="@+id/publish_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_detail_theme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/outstate_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publish_ll"
        android:layout_marginTop="7dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/out_state"
            style="@style/item_detail_theme" />

        <TextView
            android:id="@+id/outstate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/item_detail_theme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/summary_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/outstate_ll"
        android:layout_marginTop="17dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sumarry"
            style="@style/item_detail_theme" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/summary_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/borrow_ll"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/borrow_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/borrow"
            style="@style/photo_btn_theme"
            />
    </LinearLayout>
</RelativeLayout>