<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE4B5"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/output_book_name"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_ll"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/publish_tv"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/publish_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/author_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/publish_ll"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:text="@string/author_upload_tv"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/author_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/author_ll"
        android:layout_marginTop="17dp"
        android:background="@color/color_eeeeee" />

    <TextView
        android:id="@+id/book_upload_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/book_upload"
        android:textSize="18dp" />


    <ImageView
        android:id="@+id/img_iv"
        android:layout_width="78dp"
        android:layout_height="102dp"
        android:layout_below="@id/book_upload_tv"
        android:layout_marginTop="7dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/img_tv"
        android:layout_width="78dp"
        android:layout_height="102dp"
        android:layout_below="@id/book_upload_tv"
        android:layout_marginTop="7dp"
        android:background="#0E000000"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:scaleType="fitXY"
        android:text="获取图片"
        android:textColor="#515151"
        android:textSize="16sp" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/img_tv"
        android:layout_marginTop="7dp"
        android:background="@color/color_eeeeee" />

    <TextView
        android:id="@+id/sumarry_tv"
        style="@style/item_text_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:text="简介："
        android:layout_marginTop="7dp"
        />

    <EditText
        android:id="@+id/editSms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="left|top"
        android:hint="@string/saveSms"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:layout_below="@+id/sumarry_tv"
        android:layout_marginTop="7dp"
        />

    <Button
        android:id="@+id/upload_btn"
        style="@style/item_button_theme"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/register" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        app:indicatorColor="@color/color_56EE74" />
</RelativeLayout>