<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/center_item_bg"
    android:padding="8dp">

    <ImageView
        android:id="@+id/book_iv"
        android:layout_width="78dp"
        android:layout_height="128dp"
        android:layout_centerVertical="true"
        android:background="@color/color_ff00ff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/book_iv"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name" />

            <TextView
                android:id="@+id/name_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/author_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish" />

            <TextView
                android:id="@+id/publish_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="状态：已完成"
                style="@style/item_operator_text_theme"
                android:visibility="gone"
                android:id="@+id/finish_tv"
                />

            <RelativeLayout
                android:id="@+id/operator_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/receiver_btn"
                    style="@style/item_operator_btn_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:text="@string/receiver_task" />

                <Button
                    android:id="@+id/cancel_btn"
                    style="@style/item_operator_btn_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/cancel_task" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>