<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/center_item_bg"
    android:padding="8dp">

    <ImageView
        android:id="@+id/book_iv"
        android:layout_width="78dp"
        android:layout_height="128dp"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/book_iv"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_name" />

            <TextView
                android:id="@+id/name_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/author_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish" />

            <TextView
                android:id="@+id/publish_tv"
                style="@style/item_text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >
           <!-- <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <TextView
                    style="@style/item_text_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_out" />

                <TextView
                    android:id="@+id/out_state"
                    style="@style/item_text_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>-->

            <Button
                android:id="@+id/return_book_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="还书"
                style="@style/item_button_theme"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:visibility="gone"
                />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>