<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFE4B5"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:id="@+id/user_rl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:layout_centerInParent="true"
            android:textColor="@color/color_515151"
            android:id="@+id/name_tv"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_tv"
            android:layout_marginTop="7dp"
            android:id="@+id/money_tv"
            style="@style/item_text_theme"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@id/user_rl"
        android:layout_marginTop="20dp"
        android:id="@+id/number_ll"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/all_book_tv"
            style="@style/item_text_theme"
            android:background="@drawable/center_text_bg"
            android:focusable="true"
            android:clickable="true"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/center_text_bg"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/in_task_tv"
            android:layout_marginLeft="3dp"
            style="@style/item_text_theme"
            android:focusable="true"
            android:clickable="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_below="@id/number_ll"
        android:layout_marginTop="10dp"
        android:id="@+id/task_ll"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/center_text_bg"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/out_num_tv"
            style="@style/item_text_theme"
            android:focusable="true"
            android:clickable="true"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/center_text_bg"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/in_num_tv"
            android:layout_marginLeft="3dp"
            style="@style/item_text_theme"
            android:focusable="true"
            android:clickable="true"
            />
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/out_book_card_btn"
        android:layout_below="@id/task_ll"
        android:id="@+id/outBook_Btn"
        android:layout_marginTop="20dp"
        style="@style/item_button_theme"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/in_book_card_btn"
        android:layout_below="@id/outBook_Btn"
        android:id="@+id/inBook_Btn"
        android:layout_marginTop="8dp"
        style="@style/item_button_theme"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/logout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:id="@+id/logout_Btn"
        style="@style/item_button_theme"
        />
</RelativeLayout>